- Fixed #contacts-list overflow

--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,10 @@ header {
 }
 
 /* # Contacts List */
+#contacts-list {
+	max-width: 100%;
+}
+
 #contacts-list .contact {
 	background-color: #fff;
 }
